--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Наш первый сайт — Азамат и Абуталиб</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="google-site-verification" content="Z-YOZ2m2Pz1uDRHVhIvELmVC204gElefe6xRdW5PyWc" />
 </head>
 <body>
 
@@ -44,3 +45,4 @@
 
 </body>
 </html>
+
