--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Наш первый сайт — Азамат и Абуталиб</title>
+  <title>https://developers.google.com/analytics/devguides/collection/analyticsjs/</title>
   <link rel="stylesheet" href="style.css">
   <meta name="google-site-verification" content="Z-YOZ2m2Pz1uDRHVhIvELmVC204gElefe6xRdW5PyWc" />
 </head>
@@ -45,4 +46,5 @@
 
 </body>
 </html>
+
 
